--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,3 +19,13 @@ set-option -sa terminal-overrides ',xterm-256color:RGB'
 set-option -g focus-events on
 set -s set-clipboard on
 
+# tmux plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @themepack 'powerline/double/purple'
+
+# 状态栏位置，上 top 下 bottom
+set -g status-position bottom
+
+run '~/.config/tmux/plugins/tpm/tpm'
+
